--- a/src/components/CardsHolder/CardsHolder.css
+++ b/src/components/CardsHolder/CardsHolder.css
@@ -1,5 +1,55 @@
 @import url(../../vendor/Railroad/stylesheet.css);
 
+.cardsHolder__content {
+  justify-items: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 70px 0 100px;
+  max-width: 1140px;
+  width: 100%;
+  min-height: 400px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (max-width: 900px) {
+
+  .cardsHolder__content {
+    padding: 70px 0;
+  }
+}
+
+@media screen and (max-width: 820px) {
+
+  .cardsHolder__content {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 720px) {
+
+  .cardsHolder__content {
+    padding: 70px 0;
+  }
+}
+
+@media screen and (max-width: 650px) {
+
+  .cardsHolder__content {
+    padding: 32px 14px;
+  }
+}
+
+@media screen and (max-width: 386px) {
+
+  .cardsHolder__content {
+    max-width: 270px;
+    min-width: 270px;
+    padding: 70px 10px;
+  }
+}
+
 .cardsHolder__form {
   display: flex;
   flex-direction: column;
@@ -59,86 +109,18 @@
   }
 }
 
+.cardsHolder__button-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 @media screen and (max-width: 720px) {
 
   .cardsHolder__button-block button {
     max-width: 210px;
     min-width: 210px;
   }
-}
-
-.cardsHolder__card {
-  display: flex;
-  flex-direction: row;
-  justify-items: end;
-  align-items: center;
-  background-color: rgb(241 245 227);
-  border-radius: 20px;
-  border: 1px solid rgb(208 205 205);
-  margin: 20px 0;
-  gap: 10px;
-  width: 350px;
-  padding: 5px 15px;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 570px) {
-
-  .cardsHolder__card {
-    width: 250px;
-  }
-}
-
-.cardsHolder__card p {
-  margin: 0;
-  width: 100px;
-}
-
-.cardsHolder__button:hover:after {
-  width: 100%;
-}
-
-.cardsHolder__button {
-  display: block;
-  width: 240px;
-  min-height: 36px;
-  height: fit-content;
-  line-height: 32px;
-  font-size: 20px;
-  font-family: sans-serif;
-  text-decoration: none;
-  color: #333;
-  background-color: #f8f9e7;
-  letter-spacing: 2px;
-  text-align: center;
-  position: relative;
-  transition: all 0.35s;
-  border-radius: 20px;
-  justify-content: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-  border: 0.5px solid rgb(239 239 239);
-}
-
-.cardsHolder__button::after {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  /*background-color: white;*/
-  background: #61fff4;
-  transition: all 0.35s;
-  opacity: 0.4;
-  border-radius: 20px;
-}
-
-.cardsHolder__button-block {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 @media screen and (max-width: 630px) {
@@ -169,41 +151,72 @@
   }
 }
 
-.cardsHolder__content {
-  justify-items: center;
-  position: relative;
+/*.cardsHolder__card {
   display: flex;
-  flex-direction: column;
-  padding: 70px 0 100px;
-  max-width: 1140px;
+  flex-direction: row;
+  justify-items: end;
+  align-items: center;
+  background-color: rgb(241 245 227);
+  border-radius: 20px;
+  border: 1px solid rgb(208 205 205);
+  margin: 20px 0;
+  gap: 10px;
+  width: 350px;
+  padding: 5px 15px;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 570px) {
+
+  .cardsHolder__card {
+    width: 250px;
+  }
+}
+
+.cardsHolder__card p {
+  margin: 0;
+  width: 100px;
+}*/
+
+.cardsHolder__button {
+  display: block;
+  width: 240px;
+  min-height: 36px;
+  height: fit-content;
+  line-height: 32px;
+  font-size: 20px;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: #333;
+  background-color: #f8f9e7;
+  letter-spacing: 2px;
+  text-align: center;
+  position: relative;
+  transition: all 0.35s;
+  border-radius: 20px;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border: 0.5px solid rgb(239 239 239);
+}
+
+.cardsHolder__button:hover:after {
   width: 100%;
-  min-height: 400px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
-@media screen and (max-width: 900px) {
-
-  .cardsHolder__content {
-    padding: 70px 0;
-  }
-}
-
-@media screen and (max-width: 820px) {
-
-  .cardsHolder__content {
-    /*max-width: 450px;
-    min-width: 450px;*/
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 720px) {
-
-  .cardsHolder__content {
-    /*max-width: 350px;*/
-    padding: 70px 0;
-  }
+.cardsHolder__button::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  /*background-color: white;*/
+  background: #61fff4;
+  transition: all 0.35s;
+  opacity: 0.4;
+  border-radius: 20px;
 }
 
 .cardsHolder__title-raw {
@@ -228,6 +241,15 @@
   padding-bottom: 23px;
 }
 
+@media screen and (max-width: 650px) {
+
+  .cardsHolder__title {
+    padding-bottom: 28px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
 .cardsHolder__hint {
   font-family: Inter, sans-serif;
   font-weight: 400;
@@ -244,25 +266,6 @@
   transition: 0.5s;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  /*height: 100vh;*/
-  margin: 30px;
-}
-
-.container img {
-  width: 120px;
-  height: 120px;
-  margin-top: 20px;
-}
-
-.aboutMe__button:hover:after {
-  width: 100%;
-}
-
 .cardsHolder__arrow-container {
   justify-content: flex-end;
   position: relative;
@@ -276,12 +279,12 @@
   margin-bottom: 20px;
 }
 
-.cardsHolder__arrow1 {
+.cardsHolder__repeat-img {
   width: 90px;
   height: 80px;
 }
 
-.cardsHolder__arrow1:hover {
+.cardsHolder__repeat-img:hover {
   opacity: 0.5;
   cursor: pointer;
   transition: 1s;
@@ -296,53 +299,11 @@
   }
 }
 
-@media screen and (max-width: 770px) {
-
-  .cardsHolder__text {
-    font-size: 14px;
-    line-height: 22px;
-    max-width: 364px;
-  }
-}
-
-@media screen and (max-width: 650px) {
-
-  .cardsHolder__text-block {
-    flex-direction: column-reverse;
-    padding-top: 60px;
-  }
-}
-
-@media screen and (max-width: 650px) {
-
-  .cardsHolder__content {
-    padding: 32px 14px;
-  }
-}
-
-@media screen and (max-width: 386px) {
-
-  .cardsHolder__content {
-    max-width: 270px;
-    min-width: 270px;
-    padding: 70px 10px;
-  }
-}
-
 @media screen and (max-width: 650px) {
 
   .cardsHolder__text {
     padding-right: 0;
     font-size: 11px;
     line-height: 16px;
-  }
-}
-
-@media screen and (max-width: 650px) {
-
-  .cardsHolder__title {
-    padding-bottom: 28px;
-    font-size: 18px;
-    line-height: 22px;
   }
 }
