--- a/src/components/TitleContainer/TitleContainer.css
+++ b/src/components/TitleContainer/TitleContainer.css
@@ -28,9 +28,9 @@
 
   .titleContainer {
     text-align: center;
-    gap: 20px;
-    padding-bottom: 12px;
-    padding-top: 4px;
+    gap: 12px;
+    padding: 4px 8px 12px;
+    width: 100%;
   }
 }
 
@@ -42,7 +42,6 @@
   font-size: 28px;
   color: rgb(67 67 67);
   text-align: start;
-  max-width: calc(100% - 100px);
 }
 
 @media screen and (max-width: 740px) {
@@ -56,7 +55,6 @@
 @media screen and (max-width: 420px) {
 
   .titleContainer__title {
-    text-align: center;
     font-size: 18px;
   }
 }
@@ -69,6 +67,45 @@
   }
 }
 
+.titleContainer__verb-block {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.titleContainer__transcription {
+  font-family: Inter, sans-serif;
+  line-height: 1.4;
+  margin: 0;
+  font-weight: 400;
+  font-size: 28px;
+  text-align: start;
+  color: rgb(175 174 174);
+  padding-left: 12px;
+}
+
+@media screen and (max-width: 740px) {
+
+  .titleContainer__transcription {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+
+  .titleContainer__transcription {
+    text-align: center;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 340px) {
+
+  .titleContainer__transcription {
+    font-size: 16px;
+  }
+}
+
 .titleContainer__arrow-container-top {
   display: flex;
   flex-direction: column;
@@ -77,11 +114,12 @@
 
 .titleContainer__text {
   font-family: Inter, sans-serif;
-  line-height: 30px;
+  line-height: 1.2;
   margin: 0;
   font-weight: 1.3;
   font-size: 20px;
   color: rgb(67 67 67);
+  white-space: nowrap;
 }
 
 .titleContainer__text:hover {
