--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -80,9 +80,9 @@
   display: flex;
   flex-direction: row;
   max-width: 1040px;
-  /*min-height: 250px;*/
   flex-wrap: wrap;
   padding-bottom: 40px;
+  gap: 4px;
 }
 
 .decks__item {
