--- a/src/pages/WordItemPage/WordItemPage.css
+++ b/src/pages/WordItemPage/WordItemPage.css
@@ -17,6 +17,20 @@
   margin-left: auto;
 }
 
+@media screen and (max-width: 680px) {
+
+  .wordItem__content {
+    padding: 66px 20px 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+
+  .wordItem__content {
+    padding: 66px 12px 20px;
+  }
+}
+
 .wordItem__title-container1 {
   justify-content: space-between;
   position: relative;
@@ -25,6 +39,31 @@
   max-width: 1040px;
   flex-wrap: wrap;
   margin-bottom: 40px;
+}
+
+.wordItem__title-container {
+  justify-content: space-between;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  max-width: 1040px;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 780px) {
+
+  .wordItem__title-container {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+}
+
+@media screen and (max-width: 680px) {
+
+  .wordItem__title-container {
+    align-items: center;
+  }
 }
 
 .wordItem__title {
@@ -37,6 +76,13 @@
   color: rgb(67 67 67);
 }
 
+@media screen and (max-width: 630px) {
+
+  .wordItem__title {
+    text-align: center;
+  }
+}
+
 .wordItem__word {
   font-family: Inter, sans-serif;
   line-height: 30px;
@@ -47,14 +93,43 @@
   color: rgb(43 42 42);
 }
 
+@media screen and (max-width: 490px) {
+
+  .wordItem__word {
+    line-height: 20px;
+    font-size: 18px;
+    padding-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+
+  .wordItem__word {
+    font-size: 16px;
+  }
+}
+
 .wordItem__transcription {
   font-family: Inter, sans-serif;
   line-height: 28px;
-  margin: 0;
-  padding-bottom: 10px;
+  margin: 4px 0;
+  padding: 4px 0;
   font-weight: 400;
   font-size: 24px;
   color: rgb(175 174 174);
+  background-color: white;
+  border-radius: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+@media screen and (max-width: 390px) {
+
+  .wordItem__transcription {
+    font-size: 14px;
+    line-height: 26px;
+    margin: 6px 0;
+  }
 }
 
 .wordItem__title1 {
@@ -68,16 +143,11 @@
   padding-left: 20px;
 }
 
-.wordItem__text-grey {
-  font-family: Inter, sans-serif;
-  line-height: 30px;
-  margin: 0;
-  padding-bottom: 26px;
-  font-weight: 400;
-  font-size: 28px;
-  color: rgb(175 174 174);
-  padding-left: 40px;
-  padding-right: 15px;
+@media screen and (max-width: 630px) {
+
+  .wordItem__title1 {
+    padding-left: 0;
+  }
 }
 
 .wordItem__text {
@@ -89,29 +159,18 @@
   color: rgb(67 67 67);
 }
 
-.deckItem__words {
-  padding: 60px 0 70px;
-  justify-content: space-between;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  max-width: 1040px;
-  flex-wrap: wrap;
-}
-
-.wordItem__title-container {
-  justify-content: space-between;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  max-width: 1040px;
-  flex-wrap: wrap;
-}
-
 .wordItem__titleTextContainer {
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 630px) {
+
+  .wordItem__titleTextContainer {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .wordItem__forms-container {
@@ -123,6 +182,14 @@
   flex-wrap: wrap;
   padding-bottom: 30px;
   padding-top: 20px;
+}
+
+@media screen and (max-width: 630px) {
+
+  .wordItem__forms-container {
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .wordItem__form-container {
@@ -144,93 +211,13 @@
   padding-right: 30px;
 }
 
-.deckItem__arrow-container {
-  justify-content: flex-end;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  width: 200px;
-  align-self: center;
-}
-
-.deckItem__arrow {
+.wordItem__arrow {
   width: 90px;
   height: 40px;
 }
 
-.deckItem__arrow:hover {
+.wordItem__arrow:hover {
   opacity: 0.5;
   cursor: pointer;
   transition: 1s;
-}
-
-@media screen and (max-width: 780px) {
-
-  .wordItem__title-container {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column-reverse;
-  }
-}
-
-@media screen and (max-width: 680px) {
-
-  .wordItem__content {
-    padding: 66px 20px 20px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-
-  .wordItem__content {
-    padding: 66px 5px 20px;
-    align-items: center;
-  }
-}
-
-@media screen and (max-width: 680px) {
-
-  .wordItem__title-container {
-    align-items: center;
-  }
-}
-
-@media screen and (max-width: 630px) {
-
-  .wordItem__titleTextContainer {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-@media screen and (max-width: 630px) {
-
-  .wordItem__forms-container {
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@media screen and (max-width: 630px) {
-
-  .wordItem__title {
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 630px) {
-
-  .wordItem__title1 {
-    padding-left: 0;
-  }
-}
-
-@media screen and (max-width: 630px) {
-
-  .wordItem__text-grey {
-    padding-left: 0;
-    padding-right: 0;
-  }
 }
