--- a/src/components/CardsHolder/CardsHolder.module.scss
+++ b/src/components/CardsHolder/CardsHolder.module.scss
@@ -55,9 +55,8 @@
     @media (max-width: 570px) {
       padding-left: 15px;
     }
-
   
-    @media (max-width: 530px) {
+    @media (max-width: 540px) {
       max-width: 85vw;
       min-width: 85vw;
       height: 60px;
@@ -81,17 +80,23 @@
   &__buttonBlock {
     @include row;
     justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
 
-    @media (max-width: 720px) {
+    /*@media (max-width: 720px) {
       button {
         max-width: 210px;
         min-width: 210px;
       }
-    }
+    }*/
     
     @media (max-width: 630px) {
       gap: 30px;
       padding-top: 12px;
+
+      button {
+        width: 50%;
+      }
     }
     
     @media (max-width: 530px) {
