--- a/src/components/TrainsScreen/TrainsScreen.module.scss
+++ b/src/components/TrainsScreen/TrainsScreen.module.scss
@@ -138,7 +138,7 @@
 
   &__correct {
     button {
-      background-color: $color-input-correct;
+      background-color: #b1ff7c;
     }
   }
 
@@ -159,9 +159,9 @@
     border-radius: 20px;
     border: 1px solid $color-border-grey;
     box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.4);
+  }
 
-    &:hover {
-      @include hovered;
-    }
+  &__decisionBtn_hovered:hover {
+    @include hovered;
   }
 }
