--- a/src/components/ui/TrainButton/TrainButton.module.scss
+++ b/src/components/ui/TrainButton/TrainButton.module.scss
@@ -3,7 +3,7 @@
 .trainButton {
   @include font(20px, 32px, 400);
   display: block;
-  width: 240px;
+  min-width: 240px;
   min-height: 36px;
   height: fit-content;
   text-decoration: none;
@@ -18,6 +18,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   border: 0.5px solid $color-border-grey;
+  flex-grow: 1;
 
   &:after {
     position: absolute;
